@@ -6,7 +6,12 @@
 
 * New methods for interacting the Gmail's label API: get_gmail_labels,
   add_gmail_labels, set_gmail_labels, remove_gmail_labels. Thanks to
-  Brian Neal for the patch.
+  Brian Neal for the patches.
+
+Minor Features
+--------------
+* Don't traceback when an IMAP server returns a all-digit folder name
+  without quotes. Thanks to Rhett Garber for the bug report. (#107)
 
 =======
  0.8.1
